--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Roboto&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -9,6 +11,7 @@ body{
     display: flex;
     flex-direction: column;
     color:#3a3a3a;
+    font-family: "Lato", sans-serif;
 }
 
 
